// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Snapshot Tests > matches snapshot with no notifications 1`] = `
<header
  class="border-b border-purple-500/20 backdrop-blur-sm bg-slate-900/50 sticky top-0 z-50"
>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex items-center justify-between py-3"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="w-10 h-10 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-lg flex items-center justify-center shadow-lg shadow-purple-500/20"
        >
          <svg
            class="lucide lucide-coins w-6 h-6 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="6"
            />
            <path
              d="M18.09 10.37A6 6 0 1 1 10.34 18"
            />
            <path
              d="M7 6h1v4"
            />
            <path
              d="m16.71 13.88.7.71-2.82 2.82"
            />
          </svg>
        </div>
        <div>
          <h1
            class="text-lg font-bold text-white"
          >
            CryptoFaucet Hub
          </h1>
          <p
            class="text-xs text-purple-300"
          >
            Automation Platform
          </p>
        </div>
      </div>
      <div
        class="hidden md:flex items-center flex-1 max-w-md mx-8"
      >
        <input
          class="w-full px-4 py-2 bg-slate-800/50 border border-purple-500/20 rounded-lg text-white placeholder-purple-400 focus:border-purple-500 focus:outline-none text-sm"
          placeholder="Buscar faucets..."
          type="text"
        />
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button
          class="relative p-2 text-purple-300 hover:text-white transition-colors"
        >
          <svg
            class="lucide lucide-bell w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.268 21a2 2 0 0 0 3.464 0"
            />
            <path
              d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
            />
          </svg>
        </button>
        <button
          class="px-3 py-1.5 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors text-sm font-medium"
        >
          ES
        </button>
        <div
          class="flex items-center gap-3 pl-3 border-l border-purple-500/20"
        >
          <div
            class="text-right hidden sm:block"
          >
            <p
              class="text-white font-medium text-sm"
            >
              CryptoUser123
            </p>
            <p
              class="text-purple-300 text-xs"
            >
              Nivel 
              12
            </p>
          </div>
          <div
            class="w-10 h-10 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full flex items-center justify-center text-xl shadow-lg"
          >
            🦊
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-4 py-3 border-t border-purple-500/10"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-flame w-4 h-4 text-orange-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          Racha: 5 días
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-star w-4 h-4 text-yellow-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          2450
          /
          5000
           XP
        </span>
      </div>
      <div
        class="flex-1 bg-slate-800 rounded-full h-2 max-w-xs"
      >
        <div
          class="bg-gradient-to-r from-purple-500 to-pink-500 h-2 rounded-full transition-all"
          style="width: 49%;"
        />
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-users w-4 h-4 text-green-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          24
           referidos
        </span>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header Snapshot Tests > matches snapshot with user and English language 1`] = `
<header
  class="border-b border-purple-500/20 backdrop-blur-sm bg-slate-900/50 sticky top-0 z-50"
>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex items-center justify-between py-3"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="w-10 h-10 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-lg flex items-center justify-center shadow-lg shadow-purple-500/20"
        >
          <svg
            class="lucide lucide-coins w-6 h-6 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="6"
            />
            <path
              d="M18.09 10.37A6 6 0 1 1 10.34 18"
            />
            <path
              d="M7 6h1v4"
            />
            <path
              d="m16.71 13.88.7.71-2.82 2.82"
            />
          </svg>
        </div>
        <div>
          <h1
            class="text-lg font-bold text-white"
          >
            CryptoFaucet Hub
          </h1>
          <p
            class="text-xs text-purple-300"
          >
            Automation Platform
          </p>
        </div>
      </div>
      <div
        class="hidden md:flex items-center flex-1 max-w-md mx-8"
      >
        <input
          class="w-full px-4 py-2 bg-slate-800/50 border border-purple-500/20 rounded-lg text-white placeholder-purple-400 focus:border-purple-500 focus:outline-none text-sm"
          placeholder="Search faucets..."
          type="text"
        />
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button
          class="relative p-2 text-purple-300 hover:text-white transition-colors"
        >
          <svg
            class="lucide lucide-bell w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.268 21a2 2 0 0 0 3.464 0"
            />
            <path
              d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
            />
          </svg>
        </button>
        <button
          class="px-3 py-1.5 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors text-sm font-medium"
        >
          EN
        </button>
        <div
          class="flex items-center gap-3 pl-3 border-l border-purple-500/20"
        >
          <div
            class="text-right hidden sm:block"
          >
            <p
              class="text-white font-medium text-sm"
            >
              CryptoUser123
            </p>
            <p
              class="text-purple-300 text-xs"
            >
              Nivel 
              12
            </p>
          </div>
          <div
            class="w-10 h-10 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full flex items-center justify-center text-xl shadow-lg"
          >
            🦊
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-4 py-3 border-t border-purple-500/10"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-flame w-4 h-4 text-orange-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          Racha: 5 días
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-star w-4 h-4 text-yellow-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          2450
          /
          5000
           XP
        </span>
      </div>
      <div
        class="flex-1 bg-slate-800 rounded-full h-2 max-w-xs"
      >
        <div
          class="bg-gradient-to-r from-purple-500 to-pink-500 h-2 rounded-full transition-all"
          style="width: 49%;"
        />
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-users w-4 h-4 text-green-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          24
           referidos
        </span>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header Snapshot Tests > matches snapshot with user and Spanish language 1`] = `
<header
  class="border-b border-purple-500/20 backdrop-blur-sm bg-slate-900/50 sticky top-0 z-50"
>
  <div
    class="container mx-auto px-4"
  >
    <div
      class="flex items-center justify-between py-3"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="w-10 h-10 bg-gradient-to-r from-yellow-400 to-orange-500 rounded-lg flex items-center justify-center shadow-lg shadow-purple-500/20"
        >
          <svg
            class="lucide lucide-coins w-6 h-6 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="8"
              cy="8"
              r="6"
            />
            <path
              d="M18.09 10.37A6 6 0 1 1 10.34 18"
            />
            <path
              d="M7 6h1v4"
            />
            <path
              d="m16.71 13.88.7.71-2.82 2.82"
            />
          </svg>
        </div>
        <div>
          <h1
            class="text-lg font-bold text-white"
          >
            CryptoFaucet Hub
          </h1>
          <p
            class="text-xs text-purple-300"
          >
            Automation Platform
          </p>
        </div>
      </div>
      <div
        class="hidden md:flex items-center flex-1 max-w-md mx-8"
      >
        <input
          class="w-full px-4 py-2 bg-slate-800/50 border border-purple-500/20 rounded-lg text-white placeholder-purple-400 focus:border-purple-500 focus:outline-none text-sm"
          placeholder="Buscar faucets..."
          type="text"
        />
      </div>
      <div
        class="flex items-center gap-3"
      >
        <button
          class="relative p-2 text-purple-300 hover:text-white transition-colors"
        >
          <svg
            class="lucide lucide-bell w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.268 21a2 2 0 0 0 3.464 0"
            />
            <path
              d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
            />
          </svg>
          <span
            class="absolute -top-1 -right-1 w-5 h-5 bg-red-500 rounded-full text-xs text-white flex items-center justify-center"
          >
            3
          </span>
        </button>
        <button
          class="px-3 py-1.5 bg-slate-800 rounded-lg text-purple-300 hover:text-white transition-colors text-sm font-medium"
        >
          ES
        </button>
        <div
          class="flex items-center gap-3 pl-3 border-l border-purple-500/20"
        >
          <div
            class="text-right hidden sm:block"
          >
            <p
              class="text-white font-medium text-sm"
            >
              CryptoUser123
            </p>
            <p
              class="text-purple-300 text-xs"
            >
              Nivel 
              12
            </p>
          </div>
          <div
            class="w-10 h-10 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full flex items-center justify-center text-xl shadow-lg"
          >
            🦊
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-4 py-3 border-t border-purple-500/10"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-flame w-4 h-4 text-orange-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          Racha: 5 días
        </span>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-star w-4 h-4 text-yellow-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          2450
          /
          5000
           XP
        </span>
      </div>
      <div
        class="flex-1 bg-slate-800 rounded-full h-2 max-w-xs"
      >
        <div
          class="bg-gradient-to-r from-purple-500 to-pink-500 h-2 rounded-full transition-all"
          style="width: 49%;"
        />
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-users w-4 h-4 text-green-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
        <span
          class="text-purple-300 text-sm"
        >
          24
           referidos
        </span>
      </div>
    </div>
  </div>
</header>
`;
